// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeoCoordinatesField component should render default view 1`] = `
<div>
  <div
    data-coordinates=""
    data-testid="mock-publication-map"
  />
</div>
`;

exports[`GeoCoordinatesField component should render default view with readOnly 1`] = `
<div>
  <div
    data-coordinates=""
    data-readonly="true"
    data-testid="mock-publication-map"
  />
</div>
`;

exports[`GeoCoordinatesField component should render with given coordinates 1`] = `
<div>
  <div
    data-coordinates="100,100"
    data-testid="mock-publication-map"
  />
</div>
`;
